--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ body {
       මාසික ගෙවීම: රු <span id="monthlyPayment">7333</span>
     </div>
 
-    <a href="https://forms.gle/qPBJuX9akn4aRtGR9" target="_blank" class="btn">ණයක් ඉල්ලන්න</a>
+    <a href="https://cash-loan.github.io/Cash-login/" target="_blank" class="btn">ණයක් ඉල්ලන්න</a>
 
     <div class="stats-cards">
       <div class="card">
