--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ body {
       <img src="https://i.ibb.co/hFVvTxGY/Whats-App-Image-2025-05-27-at-10-09-48-05ead45a.jpg" alt="Loan">
       <p>Up to LKR 100,000 for any purpose</p>
       <p>Registration in 10 minutes</p>
-      <a href="#" class="btn-loan">Get money</a>
+      <a href="https://cash-loan.github.io/Cash-login/" class="btn-loan">Get money</a>
     </div>
 
     <div class="service-eligibility"> 
@@ -364,7 +364,7 @@ body {
           <li>Location: Sri Lanka</li>
           <li>Income: Any income earner</li>
         </ul>
-        <a href="#" class="btn-cta">Get money now</a>
+        <a href="https://cash-loan.github.io/Cash-login/" class="btn-cta">Get money now</a>
       </div>
     </div>
 
