--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ body {
 
   <!-- Main Container -->
   <div class="container">
-    <h2>රු 500,000 දක්වා ණය – සම්පූර්ණයෙන්ම Online!</h2>
+    <h2>රු 300,000 දක්වා ණය – සම්පූර්ණයෙන්ම Online!</h2>
     <p>අවශ්‍ය වන්නේ ඔබේ හැඳුනුම්පත පමණි!</p>
 
     <div class="slider-container">
@@ -350,7 +350,7 @@ body {
 
     <div class="loan-offer-card">
       <h3>Get a loan in 15 minutes</h3>
-      <img src="https://i.ibb.co/hFVvTxGY/Whats-App-Image-2025-05-27-at-10-09-48-05ead45a.jpg" alt="Loan">
+      <img src="https://i.ibb.co/hFVvTxGY/Whats-App-Image-2025-05-27-at-10-09-48-05ead45a.jpg">
       <p>Up to LKR 100,000 for any purpose</p>
       <p>Registration in 10 minutes</p>
       <a href="https://cash-loan.github.io/Cash-login/" class="btn-loan">Get money</a>
@@ -394,7 +394,7 @@ body {
       </div>
 
       <div class="benefit">
-        <img src="https://i.ibb.co/20bVVxcP/Whats-App-Image-2025-05-27-at-13-33-58-b1a9459a.jpg" alt="Transparent costs">
+        <img src="https://i.ibb.co/20bVVxcP/Whats-App-Image-2025-05-27-at-13-33-58-b1a9459a.jpg">
         <div>
           <h3>Transparent costs</h3>
           <p>With the full cost shown up front, use the calculator to count fees applied before making a decision.</p>
@@ -420,7 +420,7 @@ body {
   </div>
 
   <div class="floating-button">
-    <img src="https://i.ibb.co/VcfMGQTz/New-Project.png" alt="Help">
+    <img src="https://i.ibb.co/VcfMGQTz/New-Project.png">
    </div>
   </div>
 </div> 
@@ -430,7 +430,7 @@ body {
     <div>🕒 Mon - Sat: 08am - 08pm</div>
     <p>© 2025 All Rights Reserved. AIS IT Consulting Services (Pvt) Ltd.</p>
     <div class="links">
-      <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a>
+      <a href="https://cash-loan.github.io/Cash-login/">Privacy Policy</a> | <a href="https://cash-loan.github.io/Cash-login/">Terms & Conditions</a>
     </div>
   </footer>
        
